--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,14 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% block content %}
-  <h1>Most popular rooms</h1>
-  <ul class="actions">
-   {% for room in rooms %}
-   <li class="protected">
-    <a href='{{ room.get_absolute_url }}'>
-     <h1 class="card-title">{{ room }}</h1>
-    </a>
-   </li>
-  {% endfor %}
-  </ul>
-  <h1>Browse by category</h1>
-  <ul class="list">
-   {% for cat in cats %}
-   <li>
-    <a href='{{ cat.get_absolute_url }}'>
-     <h1 class="card-title">{{ cat.get_title }}</h1>
-     <div class="card-desc">{{ cat.description }}</div>
-    </a>
-   </li>
-   {% endfor %}
+<div id="{{ bunch.uid }}" class="{{ bunch.kind }}">
+ <p>{{ bunch.content }}</p>
+ <ul id="{{ bunch.uid }}-children">
+ </ul>
+</div>
 {% endblock %}
 {% block sidebar %}
-<div class="box">
-<h4>Coming soon</h4>
-<b>CloudPub is place where live experts can consult you in video chat</b>
-</div>
+Send instant messages or upload files on this page
 {% endblock %}
 {% block initscript %}
 {% endblock %}
