--- a/templates/room/call.html
+++ b/templates/room/call.html
@@ -115,7 +115,7 @@
 	</script>	
 {% endblock %}
 {% block content %}
-<div style="background-color: white; margin: 10px; height: 510px; text-align: center;">
+<div>
 <h1>Call user by phone</h1>
 <div style="text-align: left; width: 520px; margin: 0 auto;">
 <div style="width: 400px; text-align: center;">
