--- a/media/css/chat.css
+++ b/media/css/chat.css
@@ -109,13 +109,13 @@
 /* THE SPEECH BUBBLE
 ------------------------------------------------------------------------------------------------------------------------------- */
 
-.triangle-right {
+.message {
 	position:relative;
 	padding:15px;
-	margin:1em 0 3em;
+	margin:10px; 
 	color:#fff;
 	background:#075698; /* default background for browsers without gradient support */
-	
+	width: 95%;
 	/* css3 */
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
@@ -124,6 +124,10 @@
 	background:-webkit-gradient(linear, left top, left bottom, from(#2e88c4), to(#075698));
 	background:-moz-linear-gradient(top, #2e88c4, #075698);
 	background:-o-linear-gradient(top, #2e88c4, #075698);
+}
+
+.message p {
+	color: white;
 }
 
 /* Variant : for top positioned triangle
@@ -1248,10 +1252,11 @@
 == OVER THOUGHT BUBBLE, EMPTY, WITH BORDER (more CSS3)
 ** ============================================================================================================================ */
 
-.oval-thought-border {
+.root {
 	position:relative; 
 	padding:70px 30px;
-	margin:1em auto 80px;
+	margin: 10px;
+	margin-bottom: 60px;
 	border:10px solid #c81e2b; 
 	text-align:center;
 	color:#333; 
@@ -1273,7 +1278,7 @@
 }
 
 /* creates the larger circle */
-.oval-thought-border:before {
+.root:before {
 	content:""; 
 	position:absolute; 
 	z-index:10; 
@@ -1288,10 +1293,11 @@
 	-moz-border-radius:50px;
 	-webkit-border-radius:50px;
 	border-radius:50px;
+        z-index: 40;
 }
 
 /* creates the smaller circle */
-.oval-thought-border:after {
+.root:after {
 	content:""; 
 	position:absolute; 
 	z-index:10; 
@@ -1306,4 +1312,5 @@
 	-moz-border-radius:25px;
 	-webkit-border-radius:25px;
 	border-radius:25px;
+        z-index: 40;
 }
