--- a/media/css/chat.css
+++ b/media/css/chat.css
@@ -128,100 +128,18 @@
 
 .message p {
 	color: white;
+	text-align: left;
+        font-size: 200%;
 }
 
-/* Variant : for top positioned triangle
------------------------------------------- */
-
-.triangle-right.top {
-	/* NOTE: webkit gradient implementation is not as per spec */
-	background:-webkit-gradient(linear, left top, left bottom, from(#075698), to(#2e88c4));
-	background:-moz-linear-gradient(top, #075698, #2e88c4);
-	background:-o-linear-gradient(top, #075698, #2e88c4);
-}
-
-/* Variant : for left positioned triangle
------------------------------------------- */
-
-.triangle-right.left {
-	margin-left:40px;
-	background:#075698;
-}
-
-/* Variant : for right positioned triangle
------------------------------------------- */
-
-.triangle-right.right {
-	margin-right:40px;
-	background:#075698;
-}
-
-/* THE TRIANGLE
-------------------------------------------------------------------------------------------------------------------------------- */
-
-.triangle-right:after {
-	content:"";
-	display:block; /* reduce the damage in FF3.0 */
-	position:absolute;
-	bottom:-20px; /* value = - border-top-width - border-bottom-width */
-	left:50px; /* controls horizontal position */
-	width:0;
-	height:0;
-	border-width:20px 0 0 20px; /* vary these values to change the angle of the vertex */
-	border-style:solid;
-	border-color:#075698 transparent; 
-}
-
-/* Variant : top
------------------------------------------- */
-
-.triangle-right.top:after {
-	top:-20px; /* value = - border-top-width - border-bottom-width */
-	right:50px; /* controls horizontal position */
-	bottom:auto;
-	left:auto;
-	border-width:20px 20px 0 0; /* vary these values to change the angle of the vertex */
-	border-color:transparent #075698; 
-}
-
-/* Variant : left
------------------------------------------- */
-
-.triangle-right.left:after {
-	top:16px; 
-	left:-40px; /* value = - border-left-width - border-right-width */
-	bottom:auto;
-	border-width:15px 40px 0 0; /* vary these values to change the angle of the vertex */
-	border-color:transparent #075698; 
-}
-
-/* Variant : right
------------------------------------------- */
-
-.triangle-right.right:after {
-	top:16px; 
-	right:-40px; /* value = - border-left-width - border-right-width */
-	bottom:auto;
-    left:auto;
-	border-width:15px 0 0 40px; /* vary these values to change the angle of the vertex */
-	border-color:transparent #075698 ; 
-}
-
-
-/* ============================================================================================================================
-== BUBBLE WITH AN OBTUSE TRIANGLE
-** ============================================================================================================================ */
-
-/* THE SPEECH BUBBLE
-------------------------------------------------------------------------------------------------------------------------------- */
-
-.triangle-obtuse {
+.new {
 	position:relative;
 	padding:15px;
-	margin:1em 0 3em;
 	color:#fff;
 	background:#c81e2b;
-	
+        height: 60px;
+	text-align: center;
+        font-size: 200%;
 	/* css3 */
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
@@ -231,151 +149,6 @@
 	background:-moz-linear-gradient(top, #f04349, #c81e2b);
 	background:-o-linear-gradient(top, #f04349, #c81e2b);
 }
-
-/* Variant : for top positioned triangle
------------------------------------------- */
-
-.triangle-obtuse.top {
-	/* NOTE: webkit gradient implementation is not as per spec */
-	background:-webkit-gradient(linear, left top, left bottom, from(#c81e2b), to(#f04349));
-	background:-moz-linear-gradient(top, #c81e2b, #f04349);
-	background:-o-linear-gradient(top, #c81e2b, #f04349);
-}
-
-/* Variant : for left positioned triangle
------------------------------------------- */
-
-.triangle-obtuse.left {
-	margin-left:50px;
-	background:#c81e2b;
-}
-
-/* Variant : for right positioned triangle
------------------------------------------- */
-
-.triangle-obtuse.right {
-	margin-right:50px;
-	background:#c81e2b;
-}
-
-/* THE TRIANGLE
-------------------------------------------------------------------------------------------------------------------------------- */
-
-/* creates the wider right-angled triangle */
-.triangle-obtuse:before {
-	content:"";
-	display:block; /* reduce the damage in FF3.0 */
-	position:absolute;
-	bottom:-20px; /* value = - border-top-width - border-bottom-width */
-	left:60px; /* controls horizontal position */
-	width:0;
-	height:0;
-	border:0;
-	border-right-width:30px; /* vary this value to change the angle of the vertex */
-	border-bottom-width:20px; /* vary this value to change the height of the triangle. must be equal to the corresponding value in :after */
-	border-style:solid;
-	border-color:transparent #c81e2b;
-}
-
-/* creates the narrower right-angled triangle */
-.triangle-obtuse:after {
-	content:"";
-	display:block; /* reduce the damage in FF3.0 */
-	position:absolute;
-	bottom:-20px; /* value = - border-top-width - border-bottom-width */
-	left:80px; /* value = (:before's left) + (:before's border-right/left-width)  - (:after's border-right/left-width) */
-	width:0;
-	height:0;
-	border-width:0;
-	border-right-width:10px; /* vary this value to change the angle of the vertex */
-	border-bottom-width:20px; /* vary this value to change the height of the triangle. must be equal to the corresponding value in :before */
-	border-style:solid;
-	border-color:transparent #fff;
-}
-
-/* Variant : top
------------------------------------------- */
-
-.triangle-obtuse.top:before {
-	top:-20px; /* value = - border-top-width - border-bottom-width */
-	right:60px; /* controls horizontal position */
-	bottom:auto;
-	left:auto;
-	border:0;
-	border-left-width:30px; /* vary this value to change the width of the triangle */
-	border-top-width:20px; /* vary this value to change the height of the triangle. must be equal to the corresponding value in :after */
-	border-style:solid;
-	border-color:transparent #c81e2b;
-}
-
-.triangle-obtuse.top:after {
-	top:-20px; /* value = - border-top-width - border-bottom-width */
-	right:80px; /* value = (:before's right) + (:before's border-right/left-width)  - (:after's border-right/left-width) */
-	bottom:auto;
-	left:auto;
-	border-width:0;
-	border-left-width:10px; /* vary this value to change the width of the triangle */
-	border-top-width:20px; /* vary this value to change the height of the triangle. must be equal to the corresponding value in :before */
-	border-style:solid;
-	border-color:transparent #fff;
-}
-
-/* Variant : left
------------------------------------------- */
-
-.triangle-obtuse.left:before {
-	top:15px; /* controls vertical position */
-	left:-50px; /* value = - border-left-width - border-right-width */
-	bottom:auto;
-	border:0;
-	border-bottom-width:30px; /* vary this value to change the height of the triangle */
-	border-left-width:50px; /* vary this value to change the width of the triangle. must be equal to the corresponding value in :after */
-	border-style:solid;
-	border-color:#c81e2b transparent;
-}
-
-.triangle-obtuse.left:after {
-	top:35px; /* value = (:before's top) + (:before's border-top/bottom-width)  - (:after's border-top/bottom-width) */
-	left:-50px; /* value = - border-left-width - border-right-width */
-	bottom:auto;
-	border:0;
-	border-bottom-width:10px; /* vary this value to change the height of the triangle */
-	border-left-width:50px; /* vary this value to change the width of the triangle. must be equal to the corresponding value in :before */
-	border-style:solid;
-	border-color:#fff transparent;
-}
-
-/* Variant : right
------------------------------------------- */
-
-.triangle-obtuse.right:before {
-	top:15px; /* controls vertical position */
-	right:-50px; /* value = - border-left-width - border-right-width */
-	bottom:auto;
-	border:0;
-    left:auto;
-	border-bottom-width:30px; /* vary this value to change the height of the triangle */
-	border-right-width:50px; /* vary this value to change the width of the triangle. must be equal to the corresponding value in :after */
-	border-style:solid;
-	border-color:#c81e2b transparent;
-}
-
-.triangle-obtuse.right:after {
-	top:35px; /* value = (:before's top) + (:before's border-top/bottom-width)  - (:after's border-top/bottom-width) */
-	right:-50px; /* value = - border-left-width - border-right-width */
-	bottom:auto;
-	border:0;
-    left:auto;
-	border-bottom-width:10px; /* vary this value to change the height of the triangle */
-	border-right-width:50px; /* vary this value to change the width of the triangle. must be equal to the corresponding value in :before */
-	border-style:solid;
-	border-color:#fff transparent;
-}
-
-
-
-
-
 
 
 /* ============================================================================================================================
@@ -656,45 +429,16 @@
 == TWITTER
 ** ============================================================================================================================ */
 
-.example-twitter {
+.bunch-panel {
 	position:relative;
-	padding:15px;
-	margin:40px 10px 0.5em;
+	margin: 0 auto;
 	color:#333;
-	background:#eee;
+	background:#AAF;
 	/* css3 */
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
 	border-radius:10px;
 }
-
-.example-twitter p {font-size:28px; line-height:1.25em;}
-
-/* this isn't necessary, just saves me having to edit the HTML of the demo */
-.example-twitter:before {
-	display:block; /* reduce the damage in FF3.0 */
-	position:absolute;
-	top:-60px;
-	left:0;
-	width:155px;
-	height:36px;
-}
-
-/* creates the triangle */
-.example-twitter:after {
-	content:"";
-	display:block; /* reduce the damage in FF3.0 */
-	position:absolute;
-	top:-30px;
-	left:50px;
-	width:0;
-	height:0;
-	border:15px solid transparent;
-	border-bottom-color:#eee;
-}
-
-/* display of quote author (alternatively use a class on the element following the blockquote) */
-.example-twitter + p {padding-left:15px; font:14px Arial, sans-serif;}
 
 
 /* ============================================================================================================================
