--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% block content %}
-<ul id="_pwd">{{ bunch.html|safe }}</ul>
+<ul id="pwd">
+{{ bunch.html|safe }}
+<li id="panel" class="bunch-panel">XXX</li>
+</ul>
 {% endblock %}
 {% block sidebar %}
 Send instant messages or upload files on this page
