--- a/templates/site.html
+++ b/templates/site.html
@@ -11,6 +11,7 @@
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/reset.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/theme.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/chat.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/schedule.css" media="screen" />
         <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}css/jquery.fancybox-1.3.1.css"></script>
 
@@ -21,6 +22,15 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.js" type="text/javascript"></script>
         <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css" />
 
+	<script type="text/javascript">
+          var bunch = {'kind':'{{ request.bunch.kind }}','uid':'{{ request.bunch.uid }}','path':'{{ request.bunch.path }}',content:'{{ request.bunch.content }}'};
+        </script>
+
+        <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.cookie.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}js/Orbited.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}js/stomp.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}js/JSON.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}js/live.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/common.js"></script>
         {% block extra_head %}
         {% endblock %}
@@ -38,16 +48,14 @@ Cloudpub<sup style="font-size: 24px; top: -50px; position: relative;">beta</sup>
 </h1>
 <div id="nav">
 <ul>
-  <li><a href="{% url index %}">{% trans "Home" %}</a></li>
-  <li><a href="{% url category 'root' %}">{% trans 'Categories' %}</a></li>
-  <li class="protected"><a href="{% url rooms_view %}">{% trans 'My Rooms' %}</a></li>
-  <li class="authorized" style="display: none;"><a class="act" href="{% url call_view %}">{% trans "Call" %}</a></li>
-  <li class="authorized" style="display: none;"><a href="{% url profile_overview %}">{% trans 'Profile' %} (<u id="username"></u>)</a></li>
+  <li><a href="/god">{% trans "The Root" %}</a></li>
+  <li class="authorized" style="display: none;"><a class="act" href="{% url call_view %}">{% trans "Call Friend" %}</a></li>
+  <li class="authorized" style="display: none;"><a href="{% url profile_overview %}">{% trans 'My Stuff' %} (<u id="username"></u>)</a></li>
   <li class="authorized" style="display: none;"><a href="{% url socialauth.views.social_logout %}">{% trans "Sign out" %}</a></li>
   <li class="unauthorized" style="display: none;"><a class="act" href="{% url socialauth.views.login_page %}">{% trans "Sign in" %}</a></li>
 </ul>
 </div>
-   <form id="quick-search" action="{% url category request.category %}">
+   <form id="quick-search" action="{% url bunch path='{{ request.bunch.path }}'%}">
       <fieldset class="search">
          <label for="qsearch">Search:</label>
          <input class="tbox" id="search" name="search" value="Search..." title="Start typing and hit ENTER" type="text">
@@ -62,46 +70,20 @@ Cloudpub<sup style="font-size: 24px; top: -50px; position: relative;">beta</sup>
     <div class="drawer_button" id="drawer_off" style="display: none;"><img src="{{ MEDIA_URL }}img/collapse.png" alt="collapse" /> <a href="#">Close</a></div>
 </div>
 
-<div id="content-wrap" class="clear">
- <div id="content">
-  <div id="main">{% block content %}{% endblock %}</div>
-  <div id="sidebar" class="sidemenu">{% block sidebar %}{% endblock %}</div>
- </div>
-</div>
-
-<div id="footer-outer" class="clear">
-  <div id="footer-wrap">
-    <div class="col-a">
-      <h3>Contact Info</h3>
-      <p><strong>E-mail: </strong>support@cloudpub.us</p>
-    </div>
-    <div class="col-b">
-      <h3>Updates</h3>
-      <ul class="subscribe-stuff">
-        <li><a title="Facebook" href="http://www.ermak.us/index.html" rel="nofollow">
-                                <img alt="Facebook" title="Facebook" src="{{ MEDIA_URL }}img/social_facebook.png"></a>
-                        </li>
-                        <li><a title="Twitter" href="http://www.ermak.us/index.html" rel="nofollow">
-                                <img alt="Twitter" title="Twitter" src="{{ MEDIA_URL }}img/social_twitter.png"></a>
-                        </li>
-      </ul>
-      <p>Stay up to date. Subscribe via
-                <a href="http://www.ermak.us/index">Facebook</a>,
-                <a href="http://www.ermak.us/index">Twitter</a>
-      </p>
+   <div id="commands" class="commands">
+    <textarea id="input_content"></textarea>
+    <input id="button_bunch" type="image" src="{{ MEDIA_URL }}img/bunch.png" value="Bunch!"/> 
+    <input id="button_delete" type="image" src="{{ MEDIA_URL }}img/delete.png" value="Delete"/>
    </div>
-</div></div>
-<div id="footer-bottom">
-        <p class="bottom-left">
-           © 2010 <strong>Ermak Consulting, Inc.</strong>&nbsp; &nbsp; &nbsp;
-        </p>
-        <p class="bottom-right">
-           <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> |
-           <a href="http://validator.w3.org/check/referer">XHTML</a>    |
-           <a href="/">Home</a> |
-           <strong><a href="#top">Back to Top</a></strong>
-        </p>
-</div>
+ 
+ <div id="content" class="clear">
+  <ul id="pwd">
+   {{ bunch.html|safe }}
+   <li id="new" class="new" id="new">Click here to bunch!</li>
+   <li id="status" class="status"></li>
+  </ul>
+ </div>
+
 <script type="text/javascript">
 {% block initscript %}{% endblock %}
 </script>
