--- a/media/css/chat.css
+++ b/media/css/chat.css
@@ -113,21 +113,16 @@
 	position:relative;
 	padding:15px;
 	margin:10px; 
-	color:#fff;
-	background:#075698; /* default background for browsers without gradient support */
+	background:#EEE; /* default background for browsers without gradient support */
+	color: black;
 	width: 95%;
 	/* css3 */
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
 	border-radius:10px;
-	/* NOTE: webkit gradient implementation is not as per spec */
-	background:-webkit-gradient(linear, left top, left bottom, from(#2e88c4), to(#075698));
-	background:-moz-linear-gradient(top, #2e88c4, #075698);
-	background:-o-linear-gradient(top, #2e88c4, #075698);
 }
 
 .message p {
-	color: white;
 	text-align: left;
         font-size: 200%;
 }
@@ -136,7 +131,7 @@
 	position:relative;
 	padding:15px;
 	color:#fff;
-	background:#c81e2b;
+	background:#1E5C85;
         height: 60px;
 	text-align: center;
         font-size: 200%;
@@ -144,10 +139,6 @@
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
 	border-radius:10px;
-	/* NOTE: webkit gradient implementation is not as per spec */
-	background:-webkit-gradient(linear, left top, left bottom, from(#f04349), to(#c81e2b));
-	background:-moz-linear-gradient(top, #f04349, #c81e2b);
-	background:-o-linear-gradient(top, #f04349, #c81e2b);
 }
 
 
@@ -998,63 +989,11 @@
 
 .root {
 	position:relative; 
-	padding:70px 30px;
 	margin: 10px;
 	margin-bottom: 60px;
-	border:10px solid #c81e2b; 
+	border:10px solid #888; 
 	text-align:center;
 	color:#333; 
 	background:#fff;
-	
-	/* css3 */
-	/*
-	NOTES:
-	-webkit-border-radius:240px 140px; // produces oval in safari 4 and chrome 4
-	-webkit-border-radius:240px / 140px; // produces oval in chrome 4 (again!) but not supported in safari 4
-	Not correct application of the current spec, therefore, using longhand to avoid future problems with webkit corrects this
-	*/
-	-webkit-border-top-left-radius:240px 140px;
-	-webkit-border-top-right-radius:240px 140px;
-	-webkit-border-bottom-right-radius:240px 140px;
-	-webkit-border-bottom-left-radius:240px 140px;
-	-moz-border-radius:240px / 140px;
-	border-radius:240px / 140px;
 }
 
-/* creates the larger circle */
-.root:before {
-	content:""; 
-	position:absolute; 
-	z-index:10; 
-	bottom:-40px; 
-	right:100px; 
-	width:50px; 
-	height:50px;
-	border:10px solid #c81e2b;
-	background:#fff;
-
-	/* css3 */
-	-moz-border-radius:50px;
-	-webkit-border-radius:50px;
-	border-radius:50px;
-        z-index: 40;
-}
-
-/* creates the smaller circle */
-.root:after {
-	content:""; 
-	position:absolute; 
-	z-index:10; 
-	bottom:-60px; 
-	right:50px; 
-	width:25px; 
-	height:25px; 
-	border:10px solid #c81e2b;
-	background:#fff;
-
-	/* css3 */
-	-moz-border-radius:25px;
-	-webkit-border-radius:25px;
-	border-radius:25px;
-        z-index: 40;
-}
