--- a/templates/categories/category.html
+++ b/templates/categories/category.html
@@ -5,18 +5,16 @@
 <li>Sort by</li>
  <li><a href="{{ category.get_absolute_url }}?sort=rating&page={{ request.page }}" id="rating">{% trans "Rating" %}</a></li>
  <li><a href="{{ category.get_absolute_url }}?sort=title&page={{ request.page }}" id="views">{% trans "Title" %}</a></li>
-<li>Subcategories</li>
+ <li>{% trans "Subcategories" %}</li>
 {% if category.parent %}<li><a href="{{ category.parent.get_absolute_url }}{{ request.urlstate }}">{% trans "Back to " %}{{ category.parent.get_title }}</a></li>{% endif %}
 {% for child in category.children.all %}
 <li><a href="{{ child.get_absolute_url }}{{ request.urlstate }}">{{ child.get_title }}</a></li>
 {% endfor %}
 </ul>
 {% endblock %}
-
 {% block content %}
-
 <p>
-    <h1 class="title">Category: {{ category.get_title }}</h1>
+    <h1 class="title">{{ category.get_title }}</h1>
     <h2 class="description">{{ category.description }}</h2>
 </p>
 {% if search %}
@@ -28,10 +26,20 @@
 <li><h1><a href="{{ child.get_absolute_url }}{{ request.urlstate }}">{{ child.get_title }}</h1></a></li>
 {% endfor %}
 </ul>
-<h1>Rooms in this category</h1>
-<ul class="list">
-      {% for room in rooms %}
-          <li><a href="{% url room_view room.pk %}{{ request.urlstate }}"><h3>{{ room }}</h3></a></li>
-      {% endfor %}
+<h1>{% trans "Content" %}</h1>
+{% if videos %}
+<ul class="listing">
+  {% for video in videos %}
+   <li class="{% cycle 'odd' 'even' %}">
+   <a href="{{ video.get_absolute_url }}"><img class="fright" src="{{ video.thumbnail.url }}" /></a>
+   <h2><a href="{{ video.get_absolute_url }}">{{ video.title }}</a>
+   <small class="byline">{{ video.author.first_name }} &nbsp;-&nbsp; {{ video.pub_date|date:"d M Y" }}</small></h2>
+   <p>{{ video.description }}</p>
+   <p><a href="{{ video.get_absolute_url }}">View now...</a></p>
+   </li>
+{% endfor %}
 </ul>
+{% else %}
+<p>No content in this category</p>
+{% endif %}
 {% endblock %}
