--- a/templates/videostream/videostream_detail.html
+++ b/templates/videostream/videostream_detail.html
@@ -56,4 +56,5 @@ $("#jp_player_1").jPlayer( {
     <h2>Clip not found</h2>
     <p>Sorry, but the clip you are looking for does not seem to exist</p>
 {% endif %}
+<a href="{{ object.flvfile.url }}">Doanload</a>
 {% endblock %}
