--- a/templates/categories/category.html
+++ b/templates/categories/category.html
@@ -26,16 +26,15 @@
 <li><h1><a href="{{ child.get_absolute_url }}{{ request.urlstate }}">{{ child.get_title }}</h1></a></li>
 {% endfor %}
 </ul>
-<h1>{% trans "Content" %}</h1>
 {% if videos %}
-<ul class="listing">
+<ul class="grid">
   {% for video in videos %}
-   <li class="{% cycle 'odd' 'even' %}">
-   <a href="{{ video.get_absolute_url }}"><img class="fright" src="{{ video.thumbnail.url }}" /></a>
-   <h2><a href="{{ video.get_absolute_url }}">{{ video.title }}</a>
-   <small class="byline">{{ video.author.first_name }} &nbsp;-&nbsp; {{ video.pub_date|date:"d M Y" }}</small></h2>
-   <p>{{ video.description }}</p>
-   <p><a href="{{ video.get_absolute_url }}">View now...</a></p>
+   <li class="grid">
+   <a href="{{ video.get_absolute_url }}">
+       <h1 class="grid">{{ video.title }}</h1>
+       <img class="grid" src="{{ video.thumbnail.url }}" />
+       <p class="grid">{{ video.description }}</p>
+   </a>
    </li>
 {% endfor %}
 </ul>
